# mobility_base_ros

./: .gitignore  README.md  mobility_base.rosinstall
mobility_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
mobility_base/debian/: postinst
mobility_base/scripts/: nuc_install.bash  sdk_install.bash  sdk_update.bash
mobility_base_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
mobility_base_bringup/launch/: birdcage_laser_pipeline.launch  birdcage_pointcloud_filter.launch  floor_camera.launch  laser_birdcage_r2000.launch  laser_birdcage_vlp16.launch  laser_front_hokuyo.launch  laser_rear_hokuyo.launch  mobility_base.launch  mobility_base_driver.launch
mobility_base_bringup/udev/: 90-HokuyoLidarRules.rules
mobility_base_bringup/yaml/: birdcage_laser_filter_params.yaml
mobility_base_core_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mobility_base_core_msgs/msg/: BatteryState.msg  BumperState.msg  JoystickRaw.msg  Mode.msg
mobility_base_core_msgs/srv/: GetMaxSpeed.srv
mobility_base_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
mobility_base_description/meshes/: bumper.STL  frame.STL  hub_left.STL  hub_right.STL  lidar_bracket.STL  roller.STL  roller_collision.STL  shroud.STL
mobility_base_description/meshes/sensors/: R2000.STL
mobility_base_description/urdf/: baxter.urdf.xacro  mobility_base.urdf.xacro
mobility_base_description/urdf/sensors/: Hokuyo_URG-04LX.urdf.xacro  Hokuyo_UST-10LX.urdf.xacro  Hokuyo_UST-20LX.urdf.xacro  LI-USB30-V034M.urdf.xacro  Pepperl-Fuchs-R2000.urdf.xacro
mobility_base_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
mobility_base_examples/scripts/: motion_demo.py
mobility_base_pointcloud_filter/: CHANGELOG.rst  CMakeLists.txt  nodelets.xml  package.xml
mobility_base_pointcloud_filter/src/: PointCloudFilter.cpp  PointCloudFilter.h  filter_node.cpp  filter_nodelet.cpp
mobility_base_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
mobility_base_tools/launch/: debug.launch  rviz.launch
mobility_base_tools/resource/: DiagnosticGui.ui  DiagnosticGuiTabs.ui
mobility_base_tools/rviz/: rviz.rviz
mobility_base_tools/scripts/: record_all.sh  record_no_cameras.sh  urdf_remove_pedestal.py
mobility_base_tools/src/mobility_base_tools/: diagnostic_gui.py
