<?xml version="1.0"?>
<package format="2">
  <name>mobility_base_examples</name>
  <version>1.0.6</version>
  <description>
    Example programs to demo the Mobility Base SDK
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>

</package>
