<?xml version="1.0"?>
<package format="2">
  <name>mobility_base_pointcloud_filter</name>
  <version>1.0.6</version>
  <description>
    Remove points in the blind spots of the Dataspeed Inc. Mobility Base.
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
