<?xml version="1.0"?>
<package format="2">
  <name>mobility_base_tools</name>
  <version>1.0.6</version>
  <description>
    Tools for the Dataspeed Inc. Mobility Base
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Launch -->
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- Mobility Base SDK -->
  <exec_depend>mobility_base_core_msgs</exec_depend>

  <!-- Diagnostic GUI -->
  <depend>rospy</depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <!-- Test Depends -->
  <test_depend>roslaunch</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
